# PokeYellow_Cpp

./: .gitignore  CMakeLists.txt  Dockerfile  FindSDL2.cmake  GetGtest.cmake  GetSDL2.cmake  Jenkinsfile  Makefile  README.md  clean_vs.sh  cleanup.sh  cleanup_all.sh  cmake_clean.sh  kfarley-pokeyellow.sublime-project  proj.py  stuff.cpp
licensing/: README.md
modules/: CodeCoverage.cmake  GetGtest.cmake  GetSDL2.cmake
resources/: PlayerFront.xcf  PlayerSide.xcf  Readme.md  pallet_town_background_tileset.xcf  pallet_town_overworld.tmx  rule1.tmx
sandbox/: Makefile  glut_example.cpp
source/: CMakeLists.txt  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GlHelper.cpp  GlHelper.h  Makefile  Player.cpp  Player.h  README.md  Room.cpp  Room.h  Shader.cpp  Shader.h  common.h  main.cpp
source/shaders/: fragment_shader.txt  vertex_shader.txt
src/: Makefile  main  main.cpp  make.bat
support/: Dockerfile  Readme.md  cleanup_all.sh  proj.py
test/: .Makefile.swp  CMakeLists.txt  GameObjectTester.cpp  GameTester.cpp  Makefile  PlayerTester.cpp  README.md  RoomTester.cpp  bGtest.sh  tester  tester.cpp
